@@ -184,7 +184,7 @@ def calculate_rain(newtotal, oldtotal, maxsane=2):
         newtotal = oldtotal
     return (delta, newtotal)
 
-def loader(config_dict):
+def loader(config_dict, engine):
     altitude_m = getaltitudeM(config_dict)
     station = WS28xx(altitude=altitude_m, **config_dict['WS28xx'])
     return station
